# dustme

./: LICENSE  README.md  dustme.cabal  selecta.cabal  stack.yaml
app/: Main.hs
src/: Dustme.hs  Selecta.hs
src/Dustme/: DocDisplay.hs  Parser.hs  Renderer.hs  Score.hs  Search.hs  TTY.hs  Types.hs
src/Selecta/: Renderer.hs  Score.hs  Search.hs  TTY.hs  Text.hs  Tree.hs  Types.hs
test/: Spec.hs
